[package]
name = "sphere_world"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git", features= ["dynamic_linking"]}

bevy_egui = "0.39"
env_logger = "0.11.10"
glam = "0.32.1"
hexasphere = "18.0.0"
itertools = "0.14.0"
log = "0.4.29"
noise = "0.9.0"
num = "0.4.3"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
perf = ["bevy/trace", "bevy/trace_chrome"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

